modif sociallink+ ajout projets

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -129,6 +129,7 @@ const projects = [...allProjects]
               <div class="space-y-6 text-center glass">
                 <p
                   data-aos="fade-right"
+                  data-aos-duration="1200"
                   class="text-xl"
                 >
                   Je m'appelle Isabelle, développeuse web passionnée et
@@ -141,6 +142,7 @@ const projects = [...allProjects]
                 <p
                   class="text-xl"
                   data-aos="fade-left"
+                  data-aos-duration="1200"
                  
                 >
                   J'aime transformer des idées en projets concrets, qu'il
@@ -152,6 +154,7 @@ const projects = [...allProjects]
                 <p
                   class="text-xl"
                   data-aos="fade-right"
+                  data-aos-duration="1200"
                   
                 >
                   🚀 Toujours en quête d'apprentissage, je me forme actuellement
@@ -164,6 +167,7 @@ const projects = [...allProjects]
                 <p
                   class="text-xl"
                   data-aos="fade-left"
+                  data-aos-duration="1200"
                 >
                   💡 Ce que j'aime le plus ? Trouver des solutions simples à des
                   problèmes complexes, et apporter une touche personnelle et
@@ -174,6 +178,7 @@ const projects = [...allProjects]
                 <p
                   class="text-xl"
                   data-aos="fade-right" 
+                  data-aos-duration="1200"
                 >
                   👉 Aujourd'hui, je suis à la recherche aussi bien d'un poste
                   salarié pour continuer à monter en compétences au sein d'une
