--- a/src/pages/projects/[slug].astro
+++ b/src/pages/projects/[slug].astro
@@ -412,7 +412,7 @@ function toEmbed(url) {
   }
 
   /* Titres h4 */
-.project-description :global(h4) {
+.project-description :global(h2, h3, h4) {
   /* font-size: 2rem;  */
   font-weight: 600;
   margin-top: 2rem;
@@ -425,7 +425,7 @@ function toEmbed(url) {
   .project-description :global(p) {
     margin: 1rem 0;
     font-size: clamp(1.1rem, 3vw, 1.35rem);
-    font-weight: 300;
+    font-weight: 400;
     line-height: 1.6;
     text-align: center;
   }
